out
test.cpp:233:20: error: invalid use of non-static data member ‘mints::MX’
  233 |     long long data[MX];
      |                    ^~
test.cpp:232:21: note: declared here
  232 |     const long long MX = 2;
      |                     ^~
test.cpp: In constructor ‘mints::mints(long long int)’:
test.cpp:238:56: error: invalid types ‘<unresolved overloaded function type>[int]’ for array subscript
  238 |     mints(long long x=0) { for(int i=0; i<MX; ++i) data[i] = (x+ps[i])%ps[i]; }
      |                                                        ^
test.cpp: In member function ‘mints mints::operator+(mints) const’:
test.cpp:240:35: error: ‘struct mints’ has no member named ‘data’
  240 |         for(int i=0; i<MX; ++i) x.data[i] = (data[i]+x.data[i]) % ps[i];
      |                                   ^~~~
test.cpp:240:50: error: invalid types ‘<unresolved overloaded function type>[int]’ for array subscript
  240 |         for(int i=0; i<MX; ++i) x.data[i] = (data[i]+x.data[i]) % ps[i];
      |                                                  ^
test.cpp:240:56: error: ‘struct mints’ has no member named ‘data’
  240 |         for(int i=0; i<MX; ++i) x.data[i] = (data[i]+x.data[i]) % ps[i];
      |                                                        ^~~~
test.cpp: In member function ‘mints& mints::operator+=(mints)’:
test.cpp:243:50: error: use of deleted function ‘mints& mints::operator=(mints&&)’
  243 |     mints &operator+=(mints x) { *this = *this + x; return *this; }
      |                                                  ^
test.cpp:231:8: note: ‘mints& mints::operator=(mints&&)’ is implicitly deleted because the default definition would be ill-formed:
  231 | struct mints {
      |        ^~~~~
test.cpp:231:8: error: non-static const member ‘const long long int mints::MX’, cannot use default assignment operator
test.cpp: In member function ‘mints mints::operator-(mints) const’:
test.cpp:246:35: error: ‘struct mints’ has no member named ‘data’
  246 |         for(int i=0; i<MX; ++i) x.data[i] = (data[i]-x.data[i]+ps[i]) % ps[i];
      |                                   ^~~~
test.cpp:246:50: error: invalid types ‘<unresolved overloaded function type>[int]’ for array subscript
  246 |         for(int i=0; i<MX; ++i) x.data[i] = (data[i]-x.data[i]+ps[i]) % ps[i];
      |                                                  ^
test.cpp:246:56: error: ‘struct mints’ has no member named ‘data’
  246 |         for(int i=0; i<MX; ++i) x.data[i] = (data[i]-x.data[i]+ps[i]) % ps[i];
      |                                                        ^~~~
test.cpp: In member function ‘mints& mints::operator-=(mints)’:
test.cpp:249:50: error: use of deleted function ‘mints& mints::operator=(mints&&)’
  249 |     mints &operator-=(mints x) { *this = *this - x; return *this; }
      |                                                  ^
test.cpp: In member function ‘mints mints::operator*(mints) const’:
test.cpp:252:35: error: ‘struct mints’ has no member named ‘data’
  252 |         for(int i=0; i<MX; ++i) x.data[i] = data[i]*x.data[i]%ps[i];
      |                                   ^~~~
test.cpp:252:49: error: invalid types ‘<unresolved overloaded function type>[int]’ for array subscript
  252 |         for(int i=0; i<MX; ++i) x.data[i] = data[i]*x.data[i]%ps[i];
      |                                                 ^
test.cpp:252:55: error: ‘struct mints’ has no member named ‘data’
  252 |         for(int i=0; i<MX; ++i) x.data[i] = data[i]*x.data[i]%ps[i];
      |                                                       ^~~~
test.cpp: In member function ‘mints& mints::operator*=(mints)’:
test.cpp:255:50: error: use of deleted function ‘mints& mints::operator=(mints&&)’
  255 |     mints &operator*=(mints x) { *this = *this * x; return *this; }
      |                                                  ^
test.cpp: In member function ‘mints mints::pow(long long int) const’:
test.cpp:260:21: error: use of deleted function ‘mints& mints::operator=(mints&&)’
  260 |         ret = ret * ret;
      |                     ^~~
test.cpp:261:34: error: use of deleted function ‘mints& mints::operator=(mints&&)’
  261 |         if (x%2==1) ret = ret * *this;
      |                                  ^~~~
test.cpp: In member function ‘mints mints::inv() const’:
test.cpp:276:35: error: invalid types ‘<unresolved overloaded function type>[int]’ for array subscript
  276 |             long long x = pow(data[i], p-2, p);
      |                                   ^
test.cpp:277:17: error: ‘struct mints’ has no member named ‘data’
  277 |             ret.data[i] = x;
      |                 ^~~~
test.cpp: In member function ‘bool mints::operator<(mints) const’:
test.cpp:282:41: error: invalid types ‘<unresolved overloaded function type>[int]’ for array subscript
  282 |         for(int i=0; i<MX; ++i) if (data[i] != x.data[i]) {
      |                                         ^
test.cpp:282:50: error: ‘struct mints’ has no member named ‘data’
  282 |         for(int i=0; i<MX; ++i) if (data[i] != x.data[i]) {
      |                                                  ^~~~
test.cpp:283:24: error: invalid types ‘<unresolved overloaded function type>[int]’ for array subscript
  283 |             return data[i] < x.data[i];
      |                        ^
test.cpp:283:32: error: ‘struct mints’ has no member named ‘data’
  283 |             return data[i] < x.data[i];
      |                                ^~~~
test.cpp: In member function ‘bool mints::operator==(mints) const’:
test.cpp:288:41: error: invalid types ‘<unresolved overloaded function type>[int]’ for array subscript
  288 |         for(int i=0; i<MX; ++i) if (data[i] != x.data[i]) return false;
      |                                         ^
test.cpp:288:50: error: ‘struct mints’ has no member named ‘data’
  288 |         for(int i=0; i<MX; ++i) if (data[i] != x.data[i]) return false;
      |                                                  ^~~~
test.cpp: In member function ‘void mints::print() const’:
test.cpp:292:45: error: invalid types ‘<unresolved overloaded function type>[int]’ for array subscript
  292 |         for(int i=0; i<MX; ++i) cerr << data[i] << ' ';
      |                                             ^
test.cpp: In member function ‘std::size_t std::hash<mints>::operator()(const mints&) const’:
test.cpp:301:24: error: ‘MX’ was not declared in this scope
  301 |         for(int i=0; i<MX; ++i) {
      |                        ^~
test.cpp:303:29: error: ‘const struct mints’ has no member named ‘data’
  303 |             seed ^= phash(x.data[i]) + 0x9e3779b9 + (seed << 6) + (seed >> 2);
      |                             ^~~~
test.cpp: In function ‘std::istream& operator>>(std::istream&, mints&)’:
test.cpp:309:71: error: use of deleted function ‘mints& mints::operator=(mints&&)’
  309 | istream& operator>>(istream &is, mints &x) { long long a; cin>>a; x = a; return is; }
      |                                                                       ^
test.cpp: In function ‘std::ostream& operator<<(std::ostream&, mints&)’:
test.cpp:310:52: error: ‘struct mints’ has no member named ‘data’
  310 | ostream& operator<<(ostream& os, mints &x) { os<<x.data[0]; return os; }
      |                                                    ^~~~
